updated structure and docker compose files to work with the web host 'webstuff:8001'

--- a/docker-container/php-fpm-debug/Dockerfile
+++ b/docker-container/php-fpm-debug/Dockerfile
@@ -1,7 +1,7 @@
 FROM nanoninja/php-fpm:7.1
 
 RUN mkdir -p /var/log/myapp && chown www-data /var/log/myapp
-ENV PHP_IDE_CONFIG="serverName=docker.timeoff_portal"
+ENV PHP_IDE_CONFIG="serverName=docker.webstuff"
 
 RUN sed -i -e 's/pm.max_children = 5/pm.max_children = 25/g' /usr/local/etc/php-fpm.d/www.conf
 
